# hiyotanwa

./: README.md  mypy.ini  pyproject.toml  requirements.txt
src/: analyze.py  check_transcription.py  comment_analysis.py  convert2audio.py  frequency.py  illeism_analysis.py  kalman.py  merge.py  sentiment_analysis.py  split_comments.py  test_prompt.py  transcribe.py  yaho_analysis.py
tests/: test_analyze.py
