[tool.poetry]
name = "hiyotanwa"
version = "0.1.0"
description = ""
authors = ["root2116 <root6889@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
mypy = "^1.10.0"
pydub-stubs = "^0.25.1.1"
ffmpeg-python = "^0.2.0"
openai = "^1.31.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
simpleaudio = "^1.0.4"
pygame = "^2.5.2"
prompt-toolkit = "^3.0.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
